WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194927
NetworkDataTask redirection should not keep alive its NetworkSession
https://bugs.webkit.org/show_bug.cgi?id=194927
Summary
NetworkDataTask redirection should not keep alive its NetworkSession
Alex Christensen
Reported
2019-02-21 17:55:23 PST
NetworkDataTask redirection should not keep alive its NetworkSession
Attachments
Patch
(2.48 KB, patch)
2019-02-21 17:55 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(2.49 KB, patch)
2019-02-22 10:50 PST
,
Alex Christensen
darin
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews125 for ios-simulator-wk2
(2.65 MB, application/zip)
2019-02-22 14:05 PST
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2019-02-21 17:55:52 PST
Created
attachment 362680
[details]
Patch
Darin Adler
Comment 2
2019-02-21 20:16:17 PST
Comment on
attachment 362680
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=362680&action=review
> Source/WebKit/NetworkProcess/NetworkDataTask.h:80 > +class NetworkDataTask : public RefCounted<NetworkDataTask>, CanMakeWeakPtr<NetworkDataTask> {
Need protected or public on CanMakeWeakPtr so it can be used in a class derived from this one. Or could put CanMakeWeakPtr on NetworkDataTaskCocoa instead.
Alex Christensen
Comment 3
2019-02-22 10:50:42 PST
Created
attachment 362732
[details]
Patch
EWS Watchlist
Comment 4
2019-02-22 14:05:47 PST
Comment on
attachment 362732
[details]
Patch
Attachment 362732
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/11250465
New failing tests: imported/w3c/web-platform-tests/webrtc/simplecall-no-ssrcs.https.html
EWS Watchlist
Comment 5
2019-02-22 14:05:48 PST
Created
attachment 362763
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Alex Christensen
Comment 6
2019-03-01 18:41:32 PST
http://trac.webkit.org/r242304
Radar WebKit Bug Importer
Comment 7
2019-03-01 18:42:32 PST
<
rdar://problem/48531046
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug