NetworkDataTask redirection should not keep alive its NetworkSession https://bugs.webkit.org/show_bug.cgi?id=194927

Reviewed by Darin Adler.

This should fix rdar://problem/47580502

* NetworkProcess/NetworkDataTask.h:
* NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
(WebKit::NetworkDataTaskCocoa::willPerformHTTPRedirection):



Canonical link: https://commits.webkit.org/209574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242304 268f45cc-cd09-0410-ab3c-d52691b4dbfc